testdata/typechecker/error/classes/portfolio_DupeFieldNameIncompat.java
// Tests that duplicate and incompatible fields error.

int main() {
    return 0;
}

class DupeFieldNameIncompatClass {
    int x;
    boolean x;
}
